# kawaba

./: Cargo.toml  README.md
src/: main.rs  morphemes.rs
