[package]
name = "kawaba"
description = "Various utilities for the kawaba language."
version = "0.1.0"
authors = ["mazziechai"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.14", features = ["derive"] }
regex = "1.6.0"
ureq = { version = "2.5.0", features = ["json"] }
